# serializer version: 1
# name: test_entities[binary_sensor][binary_sensor.kuvasz_dns_my_domain_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_dns_my_domain_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_dns_my_domain_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_dns_50_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_dns_my_domain_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Domain Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_dns_my_domain_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_dns_my_domain_uptime_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_dns_my_domain_uptime_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Uptime Status',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_dns_my_domain_uptime_status',
    'supported_features': 0,
    'translation_key': 'uptime_status',
    'unique_id': 'kuvasz_uptime_test_entry_dns_50_uptime_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_dns_my_domain_uptime_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'created_at': '2024-01-01T00:00:00Z',
      'device_class': 'connectivity',
      'drift_detection_enabled': True,
      'drift_record_types': list([
        'NS',
        'MX',
      ]),
      'expected_response_code': 'NOERROR',
      'failure_count_threshold': 1,
      'friendly_name': 'My Domain Uptime Status',
      'host': 'example.com',
      'last_uptime_check': '2024-01-01T01:00:00Z',
      'latency_threshold_ms': 1000,
      'metrics_history_enabled': True,
      'next_uptime_check': '2024-01-01T01:01:00Z',
      'record_matchers': list([
        'A CONTAINS 93.184.216.34',
        'MX EXACT 10 mail.example.com',
      ]),
      'resolver_host': '1.1.1.1',
      'resolver_port': 53,
      'timeout_ms': 5000,
      'transport': 'UDP',
      'updated_at': '2024-01-02T00:00:00Z',
      'uptime_check_interval': 60,
      'uptime_error': None,
      'uptime_status_started_at': '2024-01-01T00:00:00Z',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_dns_my_domain_uptime_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_docker_my_container_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_docker_my_container_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_docker_my_container_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_docker_60_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_docker_my_container_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Container Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_docker_my_container_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_docker_my_container_uptime_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_docker_my_container_uptime_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Uptime Status',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_docker_my_container_uptime_status',
    'supported_features': 0,
    'translation_key': 'uptime_status',
    'unique_id': 'kuvasz_uptime_test_entry_docker_60_uptime_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_docker_my_container_uptime_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'container': 'postgres',
      'created_at': '2024-01-01T00:00:00Z',
      'device_class': 'connectivity',
      'docker_host': 'local',
      'failure_count_threshold': 1,
      'friendly_name': 'My Container Uptime Status',
      'image': 'postgres:17',
      'last_uptime_check': '2024-01-01T01:00:00Z',
      'metrics_history_enabled': True,
      'next_uptime_check': '2024-01-01T01:01:00Z',
      'timeout_ms': 5000,
      'updated_at': '2024-01-02T00:00:00Z',
      'uptime_check_interval': 60,
      'uptime_error': None,
      'uptime_status_started_at': '2024-01-01T00:00:00Z',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_docker_my_container_uptime_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_down_service_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_http_down_service_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_down_service_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_http_2_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_down_service_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Down Service Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_http_down_service_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_down_service_ssl_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_http_down_service_ssl_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'SSL Status',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_down_service_ssl_status',
    'supported_features': 0,
    'translation_key': 'ssl_status',
    'unique_id': 'kuvasz_uptime_test_entry_http_2_ssl_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_down_service_ssl_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'Down Service SSL Status',
      'last_ssl_check': '2024-01-01T01:00:00Z',
      'next_ssl_check': '2024-01-01T01:01:00Z',
      'ssl_error': 'SSL Handshake failed: PKIX path validation failed',
      'ssl_expiry_threshold': 30,
      'ssl_status': 'INVALID',
      'ssl_status_started_at': '2024-01-01T00:00:00Z',
      'ssl_valid_until': '2025-01-01T00:00:00Z',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_http_down_service_ssl_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_down_service_uptime_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_http_down_service_uptime_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Uptime Status',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_down_service_uptime_status',
    'supported_features': 0,
    'translation_key': 'uptime_status',
    'unique_id': 'kuvasz_uptime_test_entry_http_2_uptime_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_down_service_uptime_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'created_at': '2024-01-01T00:00:00Z',
      'device_class': 'connectivity',
      'expected_keyword': None,
      'expected_keyword_case_sensitive': False,
      'expected_keyword_negated': False,
      'expected_status_codes': list([
        200,
      ]),
      'failure_count_threshold': 1,
      'follow_redirects': True,
      'force_no_cache': False,
      'friendly_name': 'Down Service Uptime Status',
      'last_uptime_check': '2024-01-01T01:00:00Z',
      'latency_history_enabled': True,
      'next_uptime_check': '2024-01-01T01:01:00Z',
      'request_method': 'GET',
      'response_time_threshold_millis': None,
      'updated_at': None,
      'uptime_check_interval': 60,
      'uptime_error': 'Reason: Connect Error: Connection refused: example.com/10.0.0.5',
      'uptime_status_started_at': '2024-01-01T00:00:00Z',
      'url': 'https://example.com',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_http_down_service_uptime_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_my_website_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_http_my_website_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_my_website_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_http_1_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_my_website_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Website Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_http_my_website_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_my_website_ssl_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_http_my_website_ssl_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'SSL Status',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_my_website_ssl_status',
    'supported_features': 0,
    'translation_key': 'ssl_status',
    'unique_id': 'kuvasz_uptime_test_entry_http_1_ssl_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_my_website_ssl_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'My Website SSL Status',
      'last_ssl_check': '2024-01-01T01:00:00Z',
      'next_ssl_check': '2024-01-01T01:01:00Z',
      'ssl_error': None,
      'ssl_expiry_threshold': 30,
      'ssl_status': 'VALID',
      'ssl_status_started_at': '2024-01-01T00:00:00Z',
      'ssl_valid_until': '2025-01-01T00:00:00Z',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_http_my_website_ssl_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_my_website_uptime_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_http_my_website_uptime_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Uptime Status',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_my_website_uptime_status',
    'supported_features': 0,
    'translation_key': 'uptime_status',
    'unique_id': 'kuvasz_uptime_test_entry_http_1_uptime_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_http_my_website_uptime_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'created_at': '2024-01-01T00:00:00Z',
      'device_class': 'connectivity',
      'expected_keyword': None,
      'expected_keyword_case_sensitive': False,
      'expected_keyword_negated': False,
      'expected_status_codes': list([
        200,
      ]),
      'failure_count_threshold': 1,
      'follow_redirects': True,
      'force_no_cache': False,
      'friendly_name': 'My Website Uptime Status',
      'last_uptime_check': '2024-01-01T01:00:00Z',
      'latency_history_enabled': True,
      'next_uptime_check': '2024-01-01T01:01:00Z',
      'request_method': 'GET',
      'response_time_threshold_millis': None,
      'updated_at': None,
      'uptime_check_interval': 60,
      'uptime_error': None,
      'uptime_status_started_at': '2024-01-01T00:00:00Z',
      'url': 'https://example.com',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_http_my_website_uptime_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_icmp_my_server_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_icmp_my_server_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_icmp_my_server_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_icmp_30_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_icmp_my_server_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Server Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_icmp_my_server_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_icmp_my_server_uptime_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_icmp_my_server_uptime_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Uptime Status',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_icmp_my_server_uptime_status',
    'supported_features': 0,
    'translation_key': 'uptime_status',
    'unique_id': 'kuvasz_uptime_test_entry_icmp_30_uptime_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_icmp_my_server_uptime_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'created_at': '2024-01-01T00:00:00Z',
      'device_class': 'connectivity',
      'failure_count_threshold': 1,
      'friendly_name': 'My Server Uptime Status',
      'host': '192.168.1.1',
      'last_uptime_check': '2024-01-01T01:00:00Z',
      'metrics_history_enabled': True,
      'next_uptime_check': '2024-01-01T01:01:00Z',
      'packet_count': 3,
      'packet_loss_threshold': 100,
      'timeout_seconds': 5,
      'updated_at': '2024-01-02T00:00:00Z',
      'uptime_check_interval': 60,
      'uptime_error': None,
      'uptime_status_started_at': '2024-01-01T00:00:00Z',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_icmp_my_server_uptime_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_push_my_cron_job_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_push_my_cron_job_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_push_my_cron_job_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_push_20_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_push_my_cron_job_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Cron Job Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_push_my_cron_job_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_push_my_cron_job_uptime_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_push_my_cron_job_uptime_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Uptime Status',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_push_my_cron_job_uptime_status',
    'supported_features': 0,
    'translation_key': 'uptime_status',
    'unique_id': 'kuvasz_uptime_test_entry_push_20_uptime_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_push_my_cron_job_uptime_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'created_at': '2024-01-01T00:00:00Z',
      'device_class': 'connectivity',
      'failure_count_threshold': 1,
      'friendly_name': 'My Cron Job Uptime Status',
      'grace_period': 60,
      'heartbeat_interval': 300,
      'last_uptime_check': '2024-01-01T01:00:00Z',
      'next_expected_heartbeat': '2024-01-01T01:05:00Z',
      'updated_at': None,
      'uptime_error': None,
      'uptime_status_started_at': '2024-01-01T00:00:00Z',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_push_my_cron_job_uptime_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_tcp_my_database_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_tcp_my_database_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_tcp_my_database_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_tcp_40_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_tcp_my_database_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Database Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_tcp_my_database_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_tcp_my_database_uptime_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.kuvasz_tcp_my_database_uptime_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Uptime Status',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_tcp_my_database_uptime_status',
    'supported_features': 0,
    'translation_key': 'uptime_status',
    'unique_id': 'kuvasz_uptime_test_entry_tcp_40_uptime_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor][binary_sensor.kuvasz_tcp_my_database_uptime_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'created_at': '2024-01-01T00:00:00Z',
      'device_class': 'connectivity',
      'failure_count_threshold': 1,
      'friendly_name': 'My Database Uptime Status',
      'host': '192.168.1.2',
      'last_uptime_check': '2024-01-01T01:00:00Z',
      'latency_threshold_ms': 1000,
      'metrics_history_enabled': True,
      'next_uptime_check': '2024-01-01T01:01:00Z',
      'port': 5432,
      'timeout_ms': 5000,
      'updated_at': '2024-01-02T00:00:00Z',
      'uptime_check_interval': 60,
      'uptime_error': None,
      'uptime_status_started_at': '2024-01-01T00:00:00Z',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.kuvasz_tcp_my_database_uptime_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_dns_my_domain_average_latency_in_ms-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_dns_my_domain_average_latency_in_ms',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Average Latency',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_dns_my_domain_average_latency_in_ms',
    'supported_features': 0,
    'translation_key': 'average_latency_in_ms',
    'unique_id': 'kuvasz_uptime_test_entry_dns_50_average_latency_in_ms',
    'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_dns_my_domain_average_latency_in_ms-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'My Domain Average Latency',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_dns_my_domain_average_latency_in_ms',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_dns_my_domain_uptime_ratio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_dns_my_domain_uptime_ratio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Uptime Ratio',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_dns_my_domain_uptime_ratio',
    'supported_features': 0,
    'translation_key': 'uptime_ratio',
    'unique_id': 'kuvasz_uptime_test_entry_dns_50_uptime_ratio',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_dns_my_domain_uptime_ratio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Domain Uptime Ratio',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_dns_my_domain_uptime_ratio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '99.98',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_docker_my_container_average_cpu_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_docker_my_container_average_cpu_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Average CPU Usage',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_docker_my_container_average_cpu_usage',
    'supported_features': 0,
    'translation_key': 'average_cpu_usage',
    'unique_id': 'kuvasz_uptime_test_entry_docker_60_average_cpu_usage',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_docker_my_container_average_cpu_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Container Average CPU Usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_docker_my_container_average_cpu_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.5',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_docker_my_container_average_memory_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_docker_my_container_average_memory_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Average Memory Usage',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_docker_my_container_average_memory_usage',
    'supported_features': 0,
    'translation_key': 'average_memory_usage',
    'unique_id': 'kuvasz_uptime_test_entry_docker_60_average_memory_usage',
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_docker_my_container_average_memory_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'My Container Average Memory Usage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_docker_my_container_average_memory_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100.0',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_docker_my_container_uptime_ratio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_docker_my_container_uptime_ratio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Uptime Ratio',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_docker_my_container_uptime_ratio',
    'supported_features': 0,
    'translation_key': 'uptime_ratio',
    'unique_id': 'kuvasz_uptime_test_entry_docker_60_uptime_ratio',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_docker_my_container_uptime_ratio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Container Uptime Ratio',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_docker_my_container_uptime_ratio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '99.97',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_down_service_average_latency_in_ms-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_http_down_service_average_latency_in_ms',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Average Latency',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_down_service_average_latency_in_ms',
    'supported_features': 0,
    'translation_key': 'average_latency_in_ms',
    'unique_id': 'kuvasz_uptime_test_entry_http_2_average_latency_in_ms',
    'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_down_service_average_latency_in_ms-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Down Service Average Latency',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_http_down_service_average_latency_in_ms',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_down_service_ssl_valid_until-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_http_down_service_ssl_valid_until',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'SSL Valid Until',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_down_service_ssl_valid_until',
    'supported_features': 0,
    'translation_key': 'ssl_valid_until',
    'unique_id': 'kuvasz_uptime_test_entry_http_2_ssl_valid_until',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_down_service_ssl_valid_until-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Down Service SSL Valid Until',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_http_down_service_ssl_valid_until',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2025-01-01T00:00:00+00:00',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_down_service_uptime_ratio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_http_down_service_uptime_ratio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Uptime Ratio',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_down_service_uptime_ratio',
    'supported_features': 0,
    'translation_key': 'uptime_ratio',
    'unique_id': 'kuvasz_uptime_test_entry_http_2_uptime_ratio',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_down_service_uptime_ratio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Down Service Uptime Ratio',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_http_down_service_uptime_ratio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50.0',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_my_website_average_latency_in_ms-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_http_my_website_average_latency_in_ms',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Average Latency',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_my_website_average_latency_in_ms',
    'supported_features': 0,
    'translation_key': 'average_latency_in_ms',
    'unique_id': 'kuvasz_uptime_test_entry_http_1_average_latency_in_ms',
    'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_my_website_average_latency_in_ms-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'My Website Average Latency',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_http_my_website_average_latency_in_ms',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '123',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_my_website_ssl_valid_until-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_http_my_website_ssl_valid_until',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'SSL Valid Until',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_my_website_ssl_valid_until',
    'supported_features': 0,
    'translation_key': 'ssl_valid_until',
    'unique_id': 'kuvasz_uptime_test_entry_http_1_ssl_valid_until',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_my_website_ssl_valid_until-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'My Website SSL Valid Until',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_http_my_website_ssl_valid_until',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2025-01-01T00:00:00+00:00',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_my_website_uptime_ratio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_http_my_website_uptime_ratio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Uptime Ratio',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_my_website_uptime_ratio',
    'supported_features': 0,
    'translation_key': 'uptime_ratio',
    'unique_id': 'kuvasz_uptime_test_entry_http_1_uptime_ratio',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_http_my_website_uptime_ratio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Website Uptime Ratio',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_http_my_website_uptime_ratio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '99.87',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_icmp_my_server_average_latency_in_ms-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_icmp_my_server_average_latency_in_ms',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Average Latency',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_icmp_my_server_average_latency_in_ms',
    'supported_features': 0,
    'translation_key': 'average_latency_in_ms',
    'unique_id': 'kuvasz_uptime_test_entry_icmp_30_average_latency_in_ms',
    'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_icmp_my_server_average_latency_in_ms-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'My Server Average Latency',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_icmp_my_server_average_latency_in_ms',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_icmp_my_server_average_packet_loss-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_icmp_my_server_average_packet_loss',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Average Packet Loss',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_icmp_my_server_average_packet_loss',
    'supported_features': 0,
    'translation_key': 'average_packet_loss',
    'unique_id': 'kuvasz_uptime_test_entry_icmp_30_average_packet_loss',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_icmp_my_server_average_packet_loss-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Server Average Packet Loss',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_icmp_my_server_average_packet_loss',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_icmp_my_server_uptime_ratio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_icmp_my_server_uptime_ratio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Uptime Ratio',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_icmp_my_server_uptime_ratio',
    'supported_features': 0,
    'translation_key': 'uptime_ratio',
    'unique_id': 'kuvasz_uptime_test_entry_icmp_30_uptime_ratio',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_icmp_my_server_uptime_ratio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Server Uptime Ratio',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_icmp_my_server_uptime_ratio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '99.99',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_push_my_cron_job_last_heartbeat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_push_my_cron_job_last_heartbeat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last Heartbeat',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_push_my_cron_job_last_heartbeat',
    'supported_features': 0,
    'translation_key': 'last_heartbeat',
    'unique_id': 'kuvasz_uptime_test_entry_push_20_last_heartbeat',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_push_my_cron_job_last_heartbeat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'My Cron Job Last Heartbeat',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_push_my_cron_job_last_heartbeat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T01:00:00+00:00',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_push_my_cron_job_uptime_ratio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_push_my_cron_job_uptime_ratio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Uptime Ratio',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_push_my_cron_job_uptime_ratio',
    'supported_features': 0,
    'translation_key': 'uptime_ratio',
    'unique_id': 'kuvasz_uptime_test_entry_push_20_uptime_ratio',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_push_my_cron_job_uptime_ratio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Cron Job Uptime Ratio',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_push_my_cron_job_uptime_ratio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_tcp_my_database_average_latency_in_ms-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_tcp_my_database_average_latency_in_ms',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Average Latency',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_tcp_my_database_average_latency_in_ms',
    'supported_features': 0,
    'translation_key': 'average_latency_in_ms',
    'unique_id': 'kuvasz_uptime_test_entry_tcp_40_average_latency_in_ms',
    'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_tcp_my_database_average_latency_in_ms-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'My Database Average Latency',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MILLISECONDS: 'ms'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_tcp_my_database_average_latency_in_ms',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_tcp_my_database_uptime_ratio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.kuvasz_tcp_my_database_uptime_ratio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Uptime Ratio',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_tcp_my_database_uptime_ratio',
    'supported_features': 0,
    'translation_key': 'uptime_ratio',
    'unique_id': 'kuvasz_uptime_test_entry_tcp_40_uptime_ratio',
    'unit_of_measurement': '%',
  })
# ---
# name: test_entities[sensor][sensor.kuvasz_tcp_my_database_uptime_ratio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Database Uptime Ratio',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.kuvasz_tcp_my_database_uptime_ratio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '99.95',
  })
# ---
# name: test_entities[switch][switch.kuvasz_dns_my_domain_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.kuvasz_dns_my_domain_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_dns_my_domain_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_dns_50_enabled_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.kuvasz_dns_my_domain_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Domain Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.kuvasz_dns_my_domain_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch][switch.kuvasz_docker_my_container_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.kuvasz_docker_my_container_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_docker_my_container_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_docker_60_enabled_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.kuvasz_docker_my_container_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Container Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.kuvasz_docker_my_container_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch][switch.kuvasz_http_down_service_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.kuvasz_http_down_service_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_down_service_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_http_2_enabled_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.kuvasz_http_down_service_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Down Service Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.kuvasz_http_down_service_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch][switch.kuvasz_http_my_website_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.kuvasz_http_my_website_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_http_my_website_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_http_1_enabled_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.kuvasz_http_my_website_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Website Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.kuvasz_http_my_website_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch][switch.kuvasz_icmp_my_server_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.kuvasz_icmp_my_server_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_icmp_my_server_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_icmp_30_enabled_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.kuvasz_icmp_my_server_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Server Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.kuvasz_icmp_my_server_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch][switch.kuvasz_push_my_cron_job_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.kuvasz_push_my_cron_job_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_push_my_cron_job_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_push_20_enabled_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.kuvasz_push_my_cron_job_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Cron Job Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.kuvasz_push_my_cron_job_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch][switch.kuvasz_tcp_my_database_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.kuvasz_tcp_my_database_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enabled',
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_tcp_my_database_enabled',
    'supported_features': 0,
    'translation_key': 'enabled',
    'unique_id': 'kuvasz_uptime_test_entry_tcp_40_enabled_switch',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.kuvasz_tcp_my_database_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Database Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'switch.kuvasz_tcp_my_database_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[update][update.kuvasz_server_kuvasz_update-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'update.kuvasz_server_kuvasz_update',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'kuvasz_uptime',
    'previous_unique_id': None,
    'suggested_object_id': 'kuvasz_server_kuvasz_update',
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'kuvasz_uptime_test_entry_update',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[update][update.kuvasz_server_kuvasz_update-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': '/api/brands/integration/kuvasz_uptime/icon.png',
      'friendly_name': 'Kuvasz Server',
      'in_progress': False,
      'installed_version': '2.1.0',
      'latest_version': '2.2.0',
      'release_summary': None,
      'release_url': 'https://github.com/kuvasz-uptime/kuvasz/releases/tag/v2.2.0',
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 0>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.kuvasz_server_kuvasz_update',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
